# remotex

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  setup_github.sh  setup_man_pages.py  ssh_performance_config.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  label.yml  publish-to-pypi.yml  stale.yml
docs/: ARCHITECTURE.md  CLI_BEST_PRACTICES_ANALYSIS.md  FEATURE_ROADMAP.md  PACKAGING.md  PERFORMANCE.md  PUBLISHING.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md
man/man1/: remotex.1
omnihost/: __init__.py  cli.py  config.py  exit_codes.py  performance.py  profiling.py  ssh_client.py  ssh_config.py  utils.py
omnihost/commands/: __init__.py  bulk_operations.py  config_command.py  connect_command.py  exec_command.py  file_transfer.py  quick_commands.py  server_management.py
remotex/: __init__.py  audit.py  cli.py  config.py  connection_pool.py  exit_codes.py  history.py  install_man_pages.py  performance.py  profiling.py  retry.py  ssh_client.py  ssh_config.py
remotex/commands/: alias_management.py  bulk_operations.py  config_command.py  connect_command.py  exec_command.py  file_transfer.py  group_management.py  history_command.py  profiling_command.py  quick_commands.py  server_management.py  tunnel_command.py
scripts/: generate_man_pages.py
tests/: README.md  __init__.py  run_tests.py  test_config.py  test_ssh_config.py
