[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "omnihost"
version = "1.0.0"
description = "A feature-rich SSH server management CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sagar Memane"}
]
keywords = ["ssh", "server", "management", "cli", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "paramiko>=3.4.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/omnihost"
Repository = "https://github.com/yourusername/omnihost"
Documentation = "https://github.com/yourusername/omnihost/blob/main/README.md"

[project.scripts]
omnihost = "omnihost.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnihost*"]
exclude = ["tests*", "venv*"]
