[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "omnihost"
version = "1.0.0"
description = "A feature-rich SSH server management CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sagar Memane", email = "sagarmemane135@gmail.com"}
]
maintainers = [
    {name = "Sagar Memane", email = "sagarmemane135@gmail.com"}
]
keywords = ["ssh", "server", "management", "cli", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
]

dependencies = [
    "typer>=0.12.0",
    "paramiko>=3.4.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/sagarmemane135/omnihost"
Repository = "https://github.com/sagarmemane135/omnihost"
Documentation = "https://github.com/sagarmemane135/omnihost/blob/main/README.md"
Issues = "https://github.com/sagarmemane135/omnihost/issues"

[project.scripts]
omnihost = "omnihost.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnihost*"]
exclude = ["tests*", "venv*"]
