[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "remotex"
version = "1.0.1"
description = "A feature-rich SSH server management CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sagar Memane", email = "sagarmemane135@gmail.com"}
]
maintainers = [
    {name = "Sagar Memane", email = "sagarmemane135@gmail.com"}
]
keywords = ["ssh", "server", "management", "cli", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
]

dependencies = [
    "typer>=0.12.0",
    "paramiko>=3.4.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/sagarmemane135/remotex"
Repository = "https://github.com/sagarmemane135/remotex"
Documentation = "https://github.com/sagarmemane135/remotex/blob/main/README.md"
Issues = "https://github.com/sagarmemane135/remotex/issues"

[project.scripts]
remotex = "remotex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["remotex*"]
exclude = ["tests*", "venv*"]

[tool.setuptools.package-data]
remotex = ["../man/**/*.1"]

# Include man pages and scripts in distribution
[tool.setuptools]
include-package-data = true

# Data files to include (man pages)
# Note: setuptools doesn't directly support installing man pages to system directories
# Users will need to run: python -m remotex.install_man_pages (or use setup_man_pages.py)